go.mod install pacakge for CodeBuild

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2
 # 後端主程式專案在CodeBuild環境上路徑變數 $CODEBUILD_SRC_DIR
-# 前端專案們在CodeBuild環境上路徑變數    $CODEBUILD_SRC_DIR_bg-Frontend
-# Protobuff專案在CodeBuild環境上路徑變數 $CODEBUILD_SRC_DIR_protobuf
+# 前端專案們在CodeBuild環境上路徑變數    $CODEBUILD_SRC_DIR_FrontendSource
+# Protobuff專案在CodeBuild環境上路徑變數 $CODEBUILD_SRC_DIR_ProtoSource
 #
 # /usr/local/bin/sbt/bin:/root/.goenv/shims:/root/.goenv/bin:/go/bin:/root/.phpenv/shims:/root/.phpenv/bin:/root/.pyenv/shims:/root/.pyenv/bin:/root/.rbenv/shims:/usr/local/rbenv/bin:/usr/local/rbenv/shims:/root/.dotnet/:/root/.dotnet/tools/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/codebuild/user/bin
 
@@ -50,11 +50,8 @@ phases:
       - go env -w GOPRIVATE=${Repository}
       -  # TODO 安裝 DartLang
     finally:
-      - echo "--------------------------"
-      - /usr/local/bin/go version
-      - git config --global -l
-      - go env GOPRIVATE
-      - echo "--------------------------"
+      - echo "-------------------------------------------"
+      - echo "----------end install phase----------------"
   pre_build:
     commands:
       - echo "pre_build phase ..."
@@ -64,7 +61,7 @@ phases:
       # 下到Backend project目錄
       - cd $CODEBUILD_SRC_DIR
       - mkdir ${APP_ARTIFACT_FOLDER}
-      - # 注意: 這裡可能會不能 build, 似乎要進到project目錄下 TBC
+      - ls
       - GOOS=linux GOARCH=amd64 /usr/local/bin/go build -o ${APP_ARTIFACT_FOLDER}/${APP_BIN} ${APP_MAIN_FILE}
       - aws s3 cp ${APP_BUCKET}/${APP_POST} ${APP_ARTIFACT_FOLDER}
       - aws s3 cp ${APP_BUCKET}/${APP_PRE} ${APP_ARTIFACT_FOLDER}
@@ -79,7 +76,7 @@ phases:
     commands:
       - echo -e " post_build 結束 ------------------ "
     finally:
-      - echo ${date +%Y-%m-%d)
+      - echo ${date +%Y-%m-%d}
 
 
 artifacts:
