--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,11 +16,11 @@ env:
     BUILD_MAKE: "makefiles/Makefile"
     APP_POST: "configs/app-post.sh"
     APP_PRE: "configs/app-pre.sh"
-    APP_START: "config/app-start.sh"
-    APP_STOP: "config/app-stop.sh"
-    APP_VALIDATE: "config/app-validate.sh"
-    APP_SPEC: "config/appspec.yml"
-    APP_SRV_FILE: "config/App.service"
+    APP_START: "configs/app-start.sh"
+    APP_STOP: "configs/app-stop.sh"
+    APP_VALIDATE: "configs/app-validate.sh"
+    APP_SPEC: "configs/appspec.yml"
+    APP_SRV_FILE: "configs/App.service"
     SITE_BUCKET: "s3://cb-site-27"
     Repository: "github.com/moszorn"
   parameter-store:
