--- a/buildspec.yml
+++ b/buildspec.yml
@@ -54,7 +54,6 @@ phases:
       - make install-webdev
       - git config --global --add url."https://${SecretUser}:${SecretToken}@${Repository}".insteadOf "https://${Repository}"
       - go env -w GOPRIVATE=${Repository}
-      - make version
       - make codebuild-dart-pb CODEBUILD_SRC_DIR_FrontendSource=$CODEBUILD_SRC_DIR_FrontendSource CODEBUILD_SRC_DIR_ProtoSource=$CODEBUILD_SRC_DIR_ProtoSource
     finally:
       - echo "-------------------------------------------"
@@ -65,10 +64,14 @@ phases:
     finally:
   build:
     commands:
+      - #編譯前端
+      - cd $CODEBUILD_SRC_DIR_FrontendSource/project
+      - ls -la
+      - webdev build -o web:deploy -rv
+      - ls deploy
       # 下到Backend project目錄
       - cd $CODEBUILD_SRC_DIR
       - mkdir ${APP_ARTIFACT_FOLDER}
-      - ls
       - GOOS=linux GOARCH=amd64 /usr/local/bin/go build -o ${APP_ARTIFACT_FOLDER}/${APP_BIN} ${APP_MAIN_FILE}
       - aws s3 cp ${APP_BUCKET}/${APP_POST} ${APP_ARTIFACT_FOLDER}
       - aws s3 cp ${APP_BUCKET}/${APP_PRE} ${APP_ARTIFACT_FOLDER}
@@ -81,12 +84,9 @@ phases:
       - ls -la ${APP_ARTIFACT_FOLDER}
   post_build:
     commands:
-      - #編譯前端
-      - cd $CODEBUILD_SRC_DIR_FrontendSource/project && webdev build -o web:deploy -rv
-      - ls deploy
       - echo -e " post_build 結束 ------------------ "
     finally:
-      - echo ${date +%Y-%m-%d}
+#      - echo ${date +%Y-%m-%d}
 
 
 artifacts:
