--- a/buildspec.yml
+++ b/buildspec.yml
@@ -66,8 +66,8 @@ phases:
     commands:
       - #編譯前端
       - cd $CODEBUILD_SRC_DIR_FrontendSource/project
-      - $HOME/.pub-cache/bin/webdev --version
-      - $HOME/.pub-cache/bin/webdev build -o web:deploy -rv
+      - ls -la
+      - make
       - ls deploy
       # 下到Backend project目錄
       - cd $CODEBUILD_SRC_DIR
